add anew courses page to the ROYAL-CRM project

--- a/client-angular/src/app/shared/header/header.component.html
+++ b/client-angular/src/app/shared/header/header.component.html
@@ -28,6 +28,10 @@
                         ariaCurrentWhenActive="page" class="nav-link">Orders</a>
                 </li>
                 <li class="nav-item">
+                    <a routerLink="/courses-component" routerLinkActive="active"
+                        ariaCurrentWhenActive="page" class="nav-link">Orders</a>
+                </li>
+                <li class="nav-item">
                     <a routerLink="/signup-component" routerLinkActive="active"
                         ariaCurrentWhenActive="page" class="nav-link">Sign Up</a>
                 </li>
