--- a/client-angular/src/app/shared/header/header.component.html
+++ b/client-angular/src/app/shared/header/header.component.html
@@ -29,7 +29,7 @@
                 </li>
                 <li class="nav-item">
                     <a routerLink="/courses-component" routerLinkActive="active"
-                        ariaCurrentWhenActive="page" class="nav-link">Orders</a>
+                        ariaCurrentWhenActive="page" class="nav-link">Courses</a>
                 </li>
                 <li class="nav-item">
                     <a routerLink="/signup-component" routerLinkActive="active"
